--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "learning backend from chai aur code youtube channel",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start":"node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon src/index.js"
   },
   "keywords": [
     "javascript"
   ],
   "author": "yash saxena",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
